onboarding: font color fix in dark mode

--- a/app/internal_packages/ui-dark/styles/override-popout.less
+++ b/app/internal_packages/ui-dark/styles/override-popout.less
@@ -61,6 +61,11 @@
             .page.account-choose .provider:hover {
                 background-color: inherit;
             }
+            .auth-success {
+                h1, h2, h3, h4, h5, h6 {
+                    color: @text-color-inverse;
+                }
+            }
         }
     }
 }
